# strongs-aligner

./: .gitignore  DATA.md  README.md  pyproject.toml  roadmap.md
aligned_mwe/: README.md  manifest.json
data/: PROVENANCE.txt  gold_langs.json  senses_exclude.json  sources.json  trust_matrix.json  versification.json
data/dbt_catalog/: catalog-index.json  catalog-overlap.json  pin.json
data/pins/: acr.json  arb.json  arbn.json  asm.json  ben.json  eng.json  engy.json  hin.json  ind.json  rus.json  spa.json  swe.json  (+1 more)
docs/: aligner-plan.md  architecture.md  benchmark.md  bibles-recipe-layer.md  client-adoption-guide.md  data-contracts.md  publishing-principles.md
lexeme-alignments/: README.md  contest_rule.json  greek_morph_strong.json  hebrew_lexeme_strong.json  light_lexemes.json  manifest.json
lexeme_aligner/: __init__.py  benchmark.py  bootstrap_priors.py  catalog_source.py  cdn_source.py  config.py  contest_rule.py  eflomal_align.py  eval_contested.py  export_lex.py  export_mwe.py  gap_neural.py  gloss_align.py  gloss_priors.py  head_to_head.py  hebrew_source.py  helloao_source.py  merge_align.py  neural_align.py  neural_gap.py  phase2.py  pipeline.py  recipes.py  refs.py  run_pilot.py  score_gapfill.py  score_tiers.py  senses_attested.py  stat_align.py  trust_profile.py  usj_source.py  versification.py
pkf2usfm/: export_usfm.mjs  package-lock.json  package.json
scripts/: gap_gold_batch.sh  merged_all.sh  nt_complement.sh  onboard_gold.sh  realign_fixed.sh  second_base.sh  strongs_view.py  v2_upgrade_batch.sh
senses_attested/: README.md  manifest.json
(+6 files in other folders)
